# termite-dmg

./: .gitignore  Cargo.toml  README.md
src/: data_model.rs  io.rs  lib.rs
src/cpp/: header.rs  mod.rs  termite-json.cpp  termite-json.h  termite-yaml.cpp  termite-yaml.h  termite-yaml.hpp  termite.hpp  termite_test.cpp  type_array.rs  type_constrained.rs  type_enum.rs  type_struct.rs  type_variant.rs
src/schema/: mod.rs
tests/: yaml_geometry_point_example.yaml  yaml_geometry_sizes_example.yaml  yaml_import.yaml
tests/cpp/footer/: footer.cpp  footer.h  footer.hpp  footer_test.cpp
tests/cpp/full_example/: CMakeLists.txt  custom.h  full_example.cpp  full_example.h  full_example_datamodel.yaml  full_example_test.cpp
tests/cpp/header/: header.cpp  header.h  header.hpp  header_test.cpp
tests/cpp/namespace/: namespace.cpp  namespace.h  namespace.hpp  namespace_test.cpp
tests/cpp/outline/: outline.cpp  outline.h  outline.hpp  outline_test.cpp
tests/cpp/termite/: CMakeLists.txt  termite_json_test.cpp  termite_test.cpp  termite_yaml_test.cpp
tests/cpp/termite/files/: json_test.json  yaml_test.yaml
tests/cpp/type_array/basic/: basic.cpp  basic.h  basic.hpp  basic_test.cpp
tests/cpp/type_array/constraints/: constraints.hpp  constraints_test.cpp
tests/cpp/type_constrained/basic/: basic.cpp  basic.h  basic.hpp  basic_test.cpp
tests/cpp/type_constrained/constraints/: constraints.cpp  constraints.h  constraints.hpp  constraints_test.cpp
tests/cpp/type_enum/basic/: basic.cpp  basic.h  basic.hpp  basic_test.cpp
tests/cpp/type_struct/basic/: basic.cpp  basic.h  basic.hpp  basic_test.cpp
tests/cpp/type_struct/description/: description.cpp  description.h  description.hpp  description_test.cpp
tests/cpp/type_struct/field/basic/: basic.cpp  basic.h  basic.hpp  basic_test.cpp
tests/cpp/type_struct/field/collection/: collection.hpp
tests/cpp/type_struct/field/constraints/: constraints.hpp  constraints_test.cpp
tests/cpp/type_struct/field/description/: description.cpp  description.h  description.hpp  description_test.cpp
tests/cpp/type_struct/field/macros/: macros.cpp  macros.h  macros_test.cpp
tests/cpp/type_struct/field/optional/: optional.cpp  optional.h  optional.hpp  optional_test.cpp
tests/cpp/type_variant/basic/: basic.cpp  basic.h  basic.hpp  basic_test.cpp
