[package]
name = "termite-dmg"
version = "0.1.0"
edition = "2021"
description = "Termite Data Model Generator is a crate meant to generate boiler plate code for data models. The purpose is to be able to define a data model in yaml or json and then Termite will generate the code for the data model including parsing, reading from/writing to files and documentation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
indoc = "2.0.5"
serde_yaml = "0.9.34"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
