[package]
name = "termite-dmg"
version = "0.3.0"
edition = "2021"
description = "Termite Data Model Generator is a crate meant to generate boiler plate code for data models."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
indoc = "2.0.5"
serde_yaml = "0.9.34"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
